tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-unknown-field.diagnostic
diagnostic error code=ari/compiler family=general message="struct 'Point' has no field 'z'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" display="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" bytes=159
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" line=9 column=16 end_line=9 end_column=17 byte_start=131 byte_end=132 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-unknown-field.ari:9:16\n   |\n 9 |     Point { x, z, y } => x + z + y,\n   |                ^"
